@@ -87,9 +87,13 @@ image is loaded directly. Whenever a directory listing is requested,
 Apache will respond with the classic (and ugly) directory listing performed 
 by mod_autoindex.
 
-Copy the files from templates/ to where you pointed GalleryTemplateDir to,
-copy htdocs/agfolder.png and htdocs/video-*.png to your Apache icons 
-directory and copy htdocs/gallery.css to the DocumentRoot of your gallery.
+Copy the files from templates/ to where you pointed GalleryTemplateDir to.
+
+Create a directory called gallery in your Apache icons directory and
+copy the png files in htdocs to this directory. 
+
+The gallery.css file from the template directory you choose must be 
+copied to the DocumentRoot of your gallery.
 
 It is possible to include a graphical copyright notice on each picture now.
 By setting the GalleryCopyrightImage PerlSetVar you can define the path
