@@ -139,6 +139,20 @@ CONFIGURATION
         This options controls how many thumbnails should be displayed in a
         page. It requires $BROWSELINKS to be in the index.tpl template file.
 
+    GalleryDocFile
+        Pattern matching the files you want Apache::Gallery to serve as
+        normal files.
+
+        The default is
+        '\.(mpe?g|avi|mov|asf|wmv|doc|mp3|ogg|pdf|rtf|wav|txt|dlt|html?|csv|
+        eps)$'
+
+    GalleryImgFile
+        Pattern matching the files you want Apache::Gallery to serve as
+        images.
+
+        The default is '\.(jpe?g|png|tiff?|ppm|gif)$'
+
 FEATURES
     Rotate images
         Some cameras, like the Canon G3, detects the orientation of a
